--- a/index.html
+++ b/index.html
@@ -518,6 +518,10 @@
       .col12 {
         width: 100%;
       }
+
+      .offsetMd2 {
+        margin-left: 16%;
+      }
       #clients .rowG50 {
         margin-bottom: 30px;
       }
@@ -681,6 +685,27 @@
         max-width: 70%;
         margin: 0 auto 30px auto;
         font-size: 16px;
+        padding-top: 50px;
+      }
+      #testimonials blockquote::before {
+        content: "";
+        position: absolute;
+        left: 150px;
+        top: 30px;
+        width: 50px;
+        height: 50px;
+        background-image: url(images/quote.png);
+        background-size: cover;
+      }
+      #testimonials blockquote::after {
+        content: "";
+        position: absolute;
+        right: 150px;
+        bottom: 100px;
+        width: 50px;
+        height: 50px;
+        background-image: url(images/quote2.png);
+        background-size: cover;
       }
       .swiper-pagination-bullet-active {
         background-color: #000 !important;
@@ -884,7 +909,7 @@
                   <div class="rowG50 parallax-section">
                     <div class="col6">
                       <div class="abtWidget noBorder">
-                        <h3>35 team members</h3>
+                        <h3>50+ Crew</h3>
                         <p></p>
                       </div>
                     </div>
@@ -912,7 +937,7 @@
                       margin: 7px 0 0 0;
                     "
                   >
-                    Founder & Director
+                    Founder & Managing Director
                   </h5>
                 </div>
                 <div class="col8">
@@ -1080,15 +1105,15 @@
                 <div class="col8">
                   <p>
                     We are committed to excellence in every aspect of our work.
-                    From conceptualization to execution, Medha Aesthetics
+                    From conceptualization to execution, EyeCatch Architects
                     upholds the highest standards of quality and
                     professionalism. Our collaborative approach ensures that
                     each client receives personalized attention and solutions
-                    tailored to their specific needs. At Medha Aesthetics, we
+                    tailored to their specific needs. At EyeCatch Architects, we
                     are storytellers, innovators, and creators of immersive
                     experiences. With a passion for artistry and a commitment to
                     excellence, we look forward to partnering with you on your
-                    next project. Choose Medha Aesthetics for unparalleled
+                    next project. Choose EyeCatch Architects for unparalleled
                     creativity and visionary design solutions.
                   </p>
                 </div>
@@ -1388,7 +1413,9 @@
 
             <section class="section" id="testimonials">
               <div class="sectionHead parallax-section">
-                <h2>Testimonials</h2>
+                <h2 style="margin-bottom: 0; padding-bottom: 0">
+                  Testimonials
+                </h2>
               </div>
               <div class="rowG50 borderBottom parallax-section">
                 <div class="col12">
@@ -1562,7 +1589,7 @@
                 <h2>Our Verticals</h2>
               </div>
               <div class="rowG50 borderBottom">
-                <div class="col4 parallax-section">
+                <div class="col4 parallax-section offsetMd2">
                   <img src="images/ser1.jpg" class="w100" />
                   <h3>EyeCatch - Branding and Digital Marketing</h3>
                   <p>
@@ -1574,7 +1601,7 @@
                     stands out and excels in the competitive market.
                   </p>
                 </div>
-                <div class="col4 parallax-section">
+                <!-- <div class="col4 parallax-section">
                   <img src="images/ser2.jpg" class="w100" />
                   <h3>EyeCatch Architects and Interiors</h3>
                   <p>
@@ -1587,7 +1614,7 @@
                     interiors and exteriors of retail spaces from bare cell to
                     complete showrooms and villas.
                   </p>
-                </div>
+                </div> -->
                 <div class="col4 parallax-section">
                   <img src="images/ser3.jpg" class="w100" />
                   <h3>EyeCatch Home</h3>
@@ -1600,11 +1627,7 @@
                     to innovation and quality craftsmanship. Our furniture
                     studio serves as an exclusive experience center cum sales
                     point, showcasing a diverse range of world-class furniture
-                    and interior embellishments. We are planning to start a 5000
-                    sq ft display, supply, and sales showroom at Road number 12
-                    Banjara Hills, Hyderabad. We are also planning to let out
-                    franchises of our furniture showroom in Andhra Pradesh,
-                    Telangana, and Karnataka very soon.
+                    and interior embellishments.
                   </p>
                 </div>
               </div>
@@ -1675,6 +1698,7 @@
                 #fooAbout img {
                   width: 350px;
                   height: auto;
+                  margin-left: -137px;
                 }
                 #fooAbout p {
                   max-width: 80%;
@@ -1777,8 +1801,8 @@
                 <div class="sub-content" id="emailSection">
                   <p>
                     <span class="emailLabel">New Projects:</span>
-                    <a href="mailto:pranay@eyecatcharchitects.com"
-                      >pranay@eyecatcharchitects.com</a
+                    <a href="mailto:projects@eyecatcharchitects.com"
+                      >projects@eyecatcharchitects.com</a
                     >
                   </p>
                   <p>
