--- a/news-events.html
+++ b/news-events.html
@@ -237,7 +237,7 @@
       }
 
       .newsContainer {
-        width: 60%;
+        width: 50%;
         margin: 0 auto 50px auto;
       }
 
@@ -645,14 +645,406 @@
               }
             </style>
             <div class="newsContainer">
-              <div class="newsTabs">
+              <!-- <div class="newsTabs">
                 <ul class="newsCategories">
                   <li><a href="#">News</a></li>
                   <li><a href="#">Events</a></li>
                   <li><a href="#">Videos</a></li>
                   <li><a href="#">Photos</a></li>
                 </ul>
+              </div> -->
+              <div class="newsCard">
+                <div class="cardHeader">
+                  <div class="logoIcon">
+                    <img src="/images/logo.png" alt="eyecatch architects" />
+                  </div>
+                  <div class="newsInfo">
+                    <div class="newsTitle">
+                      <h2>Lorem Ipsum is simply dummy text</h2>
+                    </div>
+                    <div class="newsMeta">
+                      <div class="newsCategory">News, Video,</div>
+                      <div class="newsDate">Thursday February 6, 2025</div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Header -->
+                <div class="cardBody">
+                  <div class="newsVideo">
+                    <video controls>
+                      <source
+                        src="news/1.mp4"
+                        type="video/mp4"
+                        poster="/images/blank.png"
+                      />
+
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+                <!-- Card Body -->
+                <div class="cardFooter">
+                  <div class="newsActions">
+                    <span>Like</span
+                    ><span class="likeIcon"
+                      ><a href="#" target="_blank"
+                        ><i class="bi bi-hand-thumbs-up"></i></a
+                    ></span>
+                  </div>
+                  <div class="newsShare">
+                    <span>Share:</span>
+                    <div class="shareIcons">
+                      <span><img src="/images/facebook.svg" /></span>
+                      <span><img src="/images/twitter.svg" /></span>
+                      <span><img src="/images/instagram.svg" /></span>
+                      <span><img src="/images/linkedin.svg" /></span>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Footer -->
               </div>
+              <!-- News Card -->
+
+              <div class="newsCard">
+                <div class="cardHeader">
+                  <div class="logoIcon">
+                    <img src="/images/logo.png" alt="eyecatch architects" />
+                  </div>
+                  <div class="newsInfo">
+                    <div class="newsTitle">
+                      <h2>Lorem Ipsum is simply dummy text</h2>
+                    </div>
+                    <div class="newsMeta">
+                      <div class="newsCategory">News, Video,</div>
+                      <div class="newsDate">Thursday February 6, 2025</div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Header -->
+                <div class="cardBody">
+                  <div class="newsVideo">
+                    <video controls>
+                      <source
+                        src="news/2.mp4"
+                        type="video/mp4"
+                        poster="/images/blank.png"
+                      />
+
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+                <!-- Card Body -->
+                <div class="cardFooter">
+                  <div class="newsActions">
+                    <span>Like</span
+                    ><span class="likeIcon"
+                      ><a href="#" target="_blank"
+                        ><i class="bi bi-hand-thumbs-up"></i></a
+                    ></span>
+                  </div>
+                  <div class="newsShare">
+                    <span>Share:</span>
+                    <div class="shareIcons">
+                      <span><img src="/images/facebook.svg" /></span>
+                      <span><img src="/images/twitter.svg" /></span>
+                      <span><img src="/images/instagram.svg" /></span>
+                      <span><img src="/images/linkedin.svg" /></span>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Footer -->
+              </div>
+              <!-- News Card -->
+
+              <div class="newsCard">
+                <div class="cardHeader">
+                  <div class="logoIcon">
+                    <img src="/images/logo.png" alt="eyecatch architects" />
+                  </div>
+                  <div class="newsInfo">
+                    <div class="newsTitle">
+                      <h2>Lorem Ipsum is simply dummy text</h2>
+                    </div>
+                    <div class="newsMeta">
+                      <div class="newsCategory">News, Video,</div>
+                      <div class="newsDate">Thursday February 6, 2025</div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Header -->
+                <div class="cardBody">
+                  <div class="newsVideo">
+                    <video controls>
+                      <source
+                        src="news/3.mp4"
+                        type="video/mp4"
+                        poster="/images/blank.png"
+                      />
+
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+                <!-- Card Body -->
+                <div class="cardFooter">
+                  <div class="newsActions">
+                    <span>Like</span
+                    ><span class="likeIcon"
+                      ><a href="#" target="_blank"
+                        ><i class="bi bi-hand-thumbs-up"></i></a
+                    ></span>
+                  </div>
+                  <div class="newsShare">
+                    <span>Share:</span>
+                    <div class="shareIcons">
+                      <span><img src="/images/facebook.svg" /></span>
+                      <span><img src="/images/twitter.svg" /></span>
+                      <span><img src="/images/instagram.svg" /></span>
+                      <span><img src="/images/linkedin.svg" /></span>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Footer -->
+              </div>
+              <!-- News Card -->
+
+              <div class="newsCard">
+                <div class="cardHeader">
+                  <div class="logoIcon">
+                    <img src="/images/logo.png" alt="eyecatch architects" />
+                  </div>
+                  <div class="newsInfo">
+                    <div class="newsTitle">
+                      <h2>Lorem Ipsum is simply dummy text</h2>
+                    </div>
+                    <div class="newsMeta">
+                      <div class="newsCategory">News, Video,</div>
+                      <div class="newsDate">Thursday February 6, 2025</div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Header -->
+                <div class="cardBody">
+                  <div class="newsVideo">
+                    <video controls>
+                      <source
+                        src="news/Eyecatch Kalanjali Edit.mp4"
+                        type="video/mp4"
+                        poster="/images/blank.png"
+                      />
+
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+                <!-- Card Body -->
+                <div class="cardFooter">
+                  <div class="newsActions">
+                    <span>Like</span
+                    ><span class="likeIcon"
+                      ><a href="#" target="_blank"
+                        ><i class="bi bi-hand-thumbs-up"></i></a
+                    ></span>
+                  </div>
+                  <div class="newsShare">
+                    <span>Share:</span>
+                    <div class="shareIcons">
+                      <span><img src="/images/facebook.svg" /></span>
+                      <span><img src="/images/twitter.svg" /></span>
+                      <span><img src="/images/instagram.svg" /></span>
+                      <span><img src="/images/linkedin.svg" /></span>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Footer -->
+              </div>
+              <!-- News Card -->
+
+              <div class="newsCard">
+                <div class="cardHeader">
+                  <div class="logoIcon">
+                    <img src="/images/logo.png" alt="eyecatch architects" />
+                  </div>
+                  <div class="newsInfo">
+                    <div class="newsTitle">
+                      <h2>Lorem Ipsum is simply dummy text</h2>
+                    </div>
+                    <div class="newsMeta">
+                      <div class="newsCategory">News, Video,</div>
+                      <div class="newsDate">Thursday February 6, 2025</div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Header -->
+                <div class="cardBody">
+                  <div class="newsVideo">
+                    <video controls>
+                      <source
+                        src="news/4.mp4"
+                        type="video/mp4"
+                        poster="/images/blank.png"
+                      />
+
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+                <!-- Card Body -->
+                <div class="cardFooter">
+                  <div class="newsActions">
+                    <span>Like</span
+                    ><span class="likeIcon"
+                      ><a href="#" target="_blank"
+                        ><i class="bi bi-hand-thumbs-up"></i></a
+                    ></span>
+                  </div>
+                  <div class="newsShare">
+                    <span>Share:</span>
+                    <div class="shareIcons">
+                      <span><img src="/images/facebook.svg" /></span>
+                      <span><img src="/images/twitter.svg" /></span>
+                      <span><img src="/images/instagram.svg" /></span>
+                      <span><img src="/images/linkedin.svg" /></span>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Footer -->
+              </div>
+              <!-- News Card -->
+
+              <div class="newsCard">
+                <div class="cardHeader">
+                  <div class="logoIcon">
+                    <img src="/images/logo.png" alt="eyecatch architects" />
+                  </div>
+                  <div class="newsInfo">
+                    <div class="newsTitle">
+                      <h2>Lorem Ipsum is simply dummy text</h2>
+                    </div>
+                    <div class="newsMeta">
+                      <div class="newsCategory">News, Video,</div>
+                      <div class="newsDate">Thursday February 6, 2025</div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Header -->
+                <div class="cardBody">
+                  <div class="newsVideo">
+                    <video controls>
+                      <source
+                        src="news/5.mp4"
+                        type="video/mp4"
+                        poster="/images/blank.png"
+                      />
+
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+                <!-- Card Body -->
+                <div class="cardFooter">
+                  <div class="newsActions">
+                    <span>Like</span
+                    ><span class="likeIcon"
+                      ><a href="#" target="_blank"
+                        ><i class="bi bi-hand-thumbs-up"></i></a
+                    ></span>
+                  </div>
+                  <div class="newsShare">
+                    <span>Share:</span>
+                    <div class="shareIcons">
+                      <span><img src="/images/facebook.svg" /></span>
+                      <span><img src="/images/twitter.svg" /></span>
+                      <span><img src="/images/instagram.svg" /></span>
+                      <span><img src="/images/linkedin.svg" /></span>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Footer -->
+              </div>
+              <!-- News Card -->
+
+              <div class="newsCard">
+                <div class="cardHeader">
+                  <div class="logoIcon">
+                    <img src="/images/logo.png" alt="eyecatch architects" />
+                  </div>
+                  <div class="newsInfo">
+                    <div class="newsTitle">
+                      <h2>Lorem Ipsum is simply dummy text</h2>
+                    </div>
+                    <div class="newsMeta">
+                      <div class="newsCategory">News, Video,</div>
+                      <div class="newsDate">Thursday February 6, 2025</div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Header -->
+                <div class="cardBody">
+                  <div class="newsVideo">
+                    <video controls>
+                      <source
+                        src="news/6.mp4"
+                        type="video/mp4"
+                        poster="/images/blank.png"
+                      />
+
+                      Your browser does not support the video tag.
+                    </video>
+                  </div>
+                  <p>
+                    Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry.
+                  </p>
+                </div>
+                <!-- Card Body -->
+                <div class="cardFooter">
+                  <div class="newsActions">
+                    <span>Like</span
+                    ><span class="likeIcon"
+                      ><a href="#" target="_blank"
+                        ><i class="bi bi-hand-thumbs-up"></i></a
+                    ></span>
+                  </div>
+                  <div class="newsShare">
+                    <span>Share:</span>
+                    <div class="shareIcons">
+                      <span><img src="/images/facebook.svg" /></span>
+                      <span><img src="/images/twitter.svg" /></span>
+                      <span><img src="/images/instagram.svg" /></span>
+                      <span><img src="/images/linkedin.svg" /></span>
+                    </div>
+                  </div>
+                </div>
+                <!-- Card Footer -->
+              </div>
+              <!-- News Card -->
+
               <div class="newsCard">
                 <div class="cardHeader">
                   <div class="logoIcon">
@@ -866,8 +1258,8 @@
                   <div class="sub-content" id="emailSection">
                     <p>
                       <span class="emailLabel">New Projects:</span>
-                      <a href="mailto:pranay@eyecatcharchitects.com"
-                        >pranay@eyecatcharchitects.com</a
+                      <a href="mailto:projects@eyecatcharchitects.com"
+                        >projects@eyecatcharchitects.com</a
                       >
                     </p>
                     <p>
