--- a/projects.html
+++ b/projects.html
@@ -3250,8 +3250,8 @@
                   <div class="sub-content" id="emailSection">
                     <p>
                       <span class="emailLabel">New Projects:</span>
-                      <a href="mailto:pranay@eyecatcharchitects.com"
-                        >pranay@eyecatcharchitects.com</a
+                      <a href="mailto:projects@eyecatcharchitects.com"
+                        >projects@eyecatcharchitects.com</a
                       >
                     </p>
                     <p>
