--- a/architecture.html
+++ b/architecture.html
@@ -727,7 +727,7 @@
                     <p>
                       New Projects:
                       <a href="mailto:pranay@eyecatcharchitects.com"
-                        >pranay@eyecatcharchitects.com</a
+                        >projects@eyecatcharchitects.com</a
                       >
                     </p>
                     <p>
@@ -775,7 +775,7 @@
                         style="display: none"
                       >
                         <p class="detailedAddress">
-                          <strong>Eyecatch Architects</strong><br />
+                          <strong>Eyecatch</strong><br />
                           MG Rd, Behind Kalaniketan, Mogalrajapuram, Sidhartha
                           Nagar, Labbipet, Vijayawada, Andhra Pradesh 520010.<br />
                           +91 96189 02587<br />contact@eyecatcharchitects.in<br />
@@ -973,7 +973,6 @@
         padding-bottom: 5px;
       }
       #socialSection p a {
-        text-transform: uppercase;
       }
       #socialSection p svg {
         width: 7px;
