--- a/index.html
+++ b/index.html
@@ -330,7 +330,6 @@
         padding-bottom: 5px;
       }
       #socialSection p a {
-        text-transform: uppercase;
       }
       #socialSection p svg {
         width: 7px;
@@ -871,7 +870,10 @@
           </div>
           <div class="contentAbt">
             <section class="section">
-              <div class="row borderBottom parallax-section">
+              <div
+                class="row borderBottom parallax-section"
+                style="border-bottom: 0"
+              >
                 <div class="col4">
                   <h2 class="sectionTitle">About <br />Eyecatch Architects</h2>
                 </div>
@@ -955,7 +957,10 @@
                 </div>
               </div>
               <div class="spacer50"></div>
-              <div class="row borderBottom parallax-section management">
+              <div
+                class="row borderBottom parallax-section management"
+                style="border-bottom: 0"
+              >
                 <div class="col6 parallax-section">
                   <!-- Swiper -->
                   <div class="swiper profileSwipe">
@@ -1714,7 +1719,7 @@
                 }
                 .addressDiv {
                   display: flex;
-                  margin-top: 10px;
+                  margin-top: 18px;
                 }
                 .addressDiv div {
                   flex: 1;
@@ -1850,7 +1855,7 @@
                       style="display: none"
                     >
                       <p class="detailedAddress">
-                        <strong>Eyecatch Architects</strong><br />
+                        <strong>Eyecatch</strong><br />
                         MG Rd, Behind Kalaniketan, Mogalrajapuram, Sidhartha
                         Nagar, Labbipet, Vijayawada, Andhra Pradesh 520010.<br />
                         +91 96189 02587<br />contact@eyecatcharchitects.in<br />
