--- a/news-events.html
+++ b/news-events.html
@@ -318,7 +318,6 @@
         padding-bottom: 5px;
       }
       #socialSection p a {
-        text-transform: uppercase;
       }
       #socialSection p svg {
         width: 7px;
@@ -1307,7 +1306,7 @@
                         style="display: none"
                       >
                         <p class="detailedAddress">
-                          <strong>Eyecatch Architects</strong><br />
+                          <strong>Eyecatch</strong><br />
                           MG Rd, Behind Kalaniketan, Mogalrajapuram, Sidhartha
                           Nagar, Labbipet, Vijayawada, Andhra Pradesh 520010.<br />
                           +91 96189 02587<br />contact@eyecatcharchitects.in<br />
